Committing final changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# spring.data.elasticsearch.cluster-nodes=localhost:9300
+
+spring.freemarker.template-loader-path=classpath:/templates
+spring.freemarker.suffix=.ftl
+
+spring.data.elasticsearch.cluster-name=elasticsearch
 spring.data.elasticsearch.cluster-nodes=localhost:9300
+spring.data.elasticsearch.repositories.enabled=true
